<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/alegreya_sans_medium"
        android:text="What would you like to generate ?"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    // Buttons to activities
    <Button
        android:id="@+id/buttonToRandomNumberActivity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:paddingVertical="16dp"
        android:text="@string/activity_random_number"
        android:textSize="18sp"
        app:cornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAppName"
        app:layout_constraintWidth_percent="0.80" />

    <Button
        android:id="@+id/buttonToRandomBooleanActivity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingVertical="16dp"
        android:text="@string/activity_random_boolean"
        android:textSize="18sp"
        app:cornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="@+id/buttonToRandomNumberActivity"
        app:layout_constraintStart_toStartOf="@+id/buttonToRandomNumberActivity"
        app:layout_constraintTop_toBottomOf="@+id/buttonToRandomNumberActivity"
        app:layout_constraintWidth_percent="0.80" />

    <Button
        android:id="@+id/buttonToRandomYesNoActivity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingVertical="16dp"
        android:text="@string/activity_random_yes_no"
        android:textSize="18sp"
        app:cornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="@+id/buttonToRandomBooleanActivity"
        app:layout_constraintStart_toStartOf="@+id/buttonToRandomBooleanActivity"
        app:layout_constraintTop_toBottomOf="@+id/buttonToRandomBooleanActivity"
        app:layout_constraintWidth_percent="0.80" />

    <Button
        android:id="@+id/buttonToRandomLetterActivity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingVertical="16dp"
        android:text="@string/activity_random_letter"
        android:textSize="18sp"
        app:cornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="@+id/buttonToRandomYesNoActivity"
        app:layout_constraintStart_toStartOf="@+id/buttonToRandomYesNoActivity"
        app:layout_constraintTop_toBottomOf="@+id/buttonToRandomYesNoActivity"
        app:layout_constraintWidth_percent="0.80" />

    <Button
        android:id="@+id/buttonToRandomPasswordActivity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingVertical="16dp"
        android:text="@string/activity_random_password"
        android:textSize="18sp"
        app:cornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="@+id/buttonToRandomLetterActivity"
        app:layout_constraintStart_toStartOf="@+id/buttonToRandomLetterActivity"
        app:layout_constraintTop_toBottomOf="@+id/buttonToRandomLetterActivity"
        app:layout_constraintWidth_percent="0.80" />

</androidx.constraintlayout.widget.ConstraintLayout>