<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RandomNumberActivity">

    <TextView
        android:id="@+id/textViewRangeOfNumbers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/select_range_of_numbers"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

<!-- Minimum range -->

    <TextView
        android:id="@+id/textViewMinNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/from"
        app:layout_constraintEnd_toEndOf="@+id/textViewRangeOfNumbers"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewMaxNumber" />

    <EditText
        android:id="@+id/minNumberToGenerate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="4"
        android:inputType="numberSigned"
        android:text="@string/default_min_number"
        app:layout_constraintEnd_toEndOf="@+id/textViewMinNumber"
        app:layout_constraintStart_toStartOf="@+id/textViewMinNumber"
        app:layout_constraintTop_toBottomOf="@+id/textViewMinNumber" />

<!-- Maximum range -->

    <TextView
        android:id="@+id/textViewMaxNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/to"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textViewRangeOfNumbers"
        app:layout_constraintTop_toBottomOf="@+id/textViewRangeOfNumbers" />

    <EditText
        android:id="@+id/maxNumberToGenerate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="4"
        android:inputType="numberSigned"
        android:text="@string/default_max_number"
        app:layout_constraintEnd_toEndOf="@+id/textViewMaxNumber"
        app:layout_constraintStart_toStartOf="@+id/textViewMaxNumber"
        app:layout_constraintTop_toBottomOf="@+id/textViewMaxNumber" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="230dp" />

<!-- Button to generate -->

    <Button
        android:id="@+id/btnGenerateNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/alegreya_sans_medium"
        android:paddingHorizontal="36dp"
        android:paddingVertical="12dp"
        android:text="@string/generate_number"
        android:textSize="24sp"
        app:cornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        app:layout_constraintWidth_percent="0.80" />

<!-- Text view with generated number -->

    <TextView
        android:id="@+id/generatedNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text=""
        android:textSize="56sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGenerateNumber" />

<!-- Error -->

    <TextView
        android:id="@+id/error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text=""
        android:textColor="@color/error"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGenerateNumber" />

<!-- History -->

    <TextView
        android:id="@+id/numberHistory"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        android:justificationMode="inter_word"
        android:lineSpacingExtra="5sp"
        android:paddingHorizontal="10dp"
        android:scrollbars="vertical"
        android:text=""
        android:textSize="18sp"
        android:typeface="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/generatedNumber"
        app:layout_constraintWidth_percent="0.90" />

</androidx.constraintlayout.widget.ConstraintLayout>